tests/compile_fail/no_std/runtime/thread_local.rs
pui::make_global_id_alloc_tl! {
    type _Runtime = u8;
}

fn main() {}
