tests/compile_fail/no_std/runtime/thread_local.stderr
error: the `std` feature on `pui` must be turned on to allow thread local storage
 --> $DIR/thread_local.rs:1:1
  |
1 | / pui::make_global_id_alloc_tl! {
2 | |     type _Runtime = u8;
3 | | }
  | |_^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
